fixes bugs and adds tests
